syntax = "proto3";

package brz;

import "domain.proto";
import "google/protobuf/empty.proto";
import "google/protobuf/struct.proto";

option go_package = "github.com/autumnterror/breezynotes;brzrpc";

// ===== Requests =====
message ChangeBlockOrderRequest {
  string noteId = 1;
  int32 old_order = 2;
  int32 new_order = 3;
  string userId = 4;
}
message ChangeTypeBlockRequest {
  string blockId = 1;
  string new_type = 2;
  string userId = 3;
  string noteId = 4;
}
message OpBlockRequest {
  string blockId = 1;
  string op = 2;
  google.protobuf.Struct data = 3;
  string userId = 4;
  string noteId = 5;
}

message ChangeTitleNoteRequest {
  string idNote = 1;
  string title = 2;
  string idUser = 3;
}

message UpdateTagTitleRequest {
  string idTag = 1;
  string title = 2;
  string idUser = 3;
}
message UpdateTagColorRequest {
  string idTag = 1;
  string color = 2;
  string idUser = 3;
}
message UpdateTagEmojiRequest {
  string idTag = 1;
  string emoji = 2;
  string idUser = 3;
}

message UpdateNoteTitleRequest {
  string id = 1;
  string title = 2;
}

message ShareNoteRequest {
  string note_id = 1;
  string user_id_to_share = 2;
  string role = 3;
  string user_id = 4;
}

message ChangeUserRoleRequest {
  string user_id_to_change = 1;
  string new_role = 2;
  string note_id = 3;
  string user_id = 4;
}

message CreateBlockRequest {
  string type = 1;
  string noteId = 2;
  int32 pos = 3;
  google.protobuf.Struct data = 4;
  string userId = 5;
}

message SearchRequest {
  string userId = 1;
  string prompt = 2;
}

// ===== BlockNote Service =====
service BlockNoteService {
  rpc DeleteBlock(NoteBlockUserId) returns (google.protobuf.Empty);
  rpc CreateBlock(CreateBlockRequest) returns (Id);
  rpc OpBlock(OpBlockRequest) returns (google.protobuf.Empty);
  rpc GetBlock(NoteBlockUserId) returns (Block);
  //  rpc GetBlockAsFirst(BlockId) returns (StringResponse);
  rpc ChangeBlockOrder(ChangeBlockOrderRequest) returns (google.protobuf.Empty);
  rpc ChangeTypeBlock(ChangeTypeBlockRequest) returns (google.protobuf.Empty);

  rpc CleanTrash(UserId) returns (google.protobuf.Empty);
  rpc NoteToTrash(UserNoteId) returns (google.protobuf.Empty);
  rpc NoteFromTrash(UserNoteId) returns (google.protobuf.Empty);
  // rpc FindNoteInTrash(UserNoteId) returns (Note);

  rpc GetNote(UserNoteId) returns (NoteWithBlocks);
  rpc CreateNote(Note) returns (google.protobuf.Empty);
  //  rpc UpdateNoteTitle(UpdateNoteTitleRequest) returns (google.protobuf.Empty);
  rpc ChangeTitleNote(ChangeTitleNoteRequest) returns (google.protobuf.Empty);

  rpc GetAllBlocksInNote(Strings) returns (Blocks);
  rpc GetAllNotes(UserId) returns (NoteParts);
  rpc GetNotesByTag(UserTagId) returns (NoteParts);
  rpc GetNotesFromTrash(UserId) returns (NoteParts);
  rpc Search(SearchRequest) returns (stream NotePart);

  rpc AddTagToNote(NoteTagUserId) returns (google.protobuf.Empty);
  rpc RemoveTagFromNote(UserNoteId) returns (google.protobuf.Empty);
  rpc CreateTag(Tag) returns (google.protobuf.Empty);
  rpc GetTagsByUser(UserId) returns (Tags);
  //  rpc GetTag(UserTagId) returns (Tag);
  rpc UpdateTagTitle(UpdateTagTitleRequest) returns (google.protobuf.Empty);
  rpc UpdateTagColor(UpdateTagColorRequest) returns (google.protobuf.Empty);
  rpc UpdateTagEmoji(UpdateTagEmojiRequest) returns (google.protobuf.Empty);
  rpc DeleteTag(UserTagId) returns (google.protobuf.Empty);

  rpc ShareNote(ShareNoteRequest) returns (google.protobuf.Empty);
  // rpc ChangeUserRole(ChangeUserRoleRequest) returns (google.protobuf.Empty);

  rpc Healthz(google.protobuf.Empty) returns (google.protobuf.Empty);
}
